Bug 267003 - [UIAsyncTextInput] Keyboard incorrectly autocapitalizes after deleting backwards
Summary: [UIAsyncTextInput] Keyboard incorrectly autocapitalizes after deleting backwards
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-02 15:11 PST by Wenson Hsieh
Modified: 2024-01-02 21:17 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2024-01-02 15:11:18 PST
rdar://120381357
Comment 1 Wenson Hsieh 2024-01-02 16:06:03 PST
Pull request: https://github.com/WebKit/WebKit/pull/22325
Comment 2 EWS 2024-01-02 21:17:07 PST
Committed 272594@main (9bf259e8d9e0): <https://commits.webkit.org/272594@main>

Reviewed commits have been landed. Closing PR #22325 and removing active labels.